syntax = "proto3";

package auth;

service AuthService {
  rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse);
  rpc GetUserById (GetUserByIdRequest) returns (GetUserByIdResponse);
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  string userId = 2;
  string email = 3;
  string role = 4;
  string message = 5;
}

message GetUserByIdRequest {
  string userId = 1;
}

message GetUserByIdResponse {
  string id = 1;
  string email = 2;
  string role = 3;
  bool isEmailVerified = 4;
  bool isActive = 5;
}
